Final-ish repackage and refactor

--- a/options.html
+++ b/options.html
@@ -62,7 +62,7 @@
   </div>
 
   <footer class="page-footer">
-    <p>Made with 🙃 by <a href="https://clontz.blog" target="_blank" class="footer-link">Lee Clontz</a> or the project <a href="https://github.com/lclontz/prompt-drawer">GitHub repo</a></p>
+    <p>Made with 🙃 by <a href="https://clontz.blog" target="_blank" class="footer-link">Lee Clontz</a> • <a href="https://github.com/lclontz/prompt-drawer" target="_blank" class="footer-link">GitHub</a></p>
   </footer>
 
   <!-- Add/Edit Snippet Modal -->
